comment partition
