# comment/internal/server/http.go
@@ -1,18 +1,17 @@
 package server
 
 import (
-	helloworldv1 "comment/api/helloworld/v1"
-	"comment/internal/conf"
-	"comment/internal/service"
+	"github.com/knoci/roaming-world/comment/internal/conf"
+	"github.com/knoci/roaming-world/comment/internal/service"
 
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/http"
-	commentv1 "github.com/knoci/roaming-world/comment/api/comment/v1"
+	v1 "github.com/knoci/roaming-world/comment/api/comment/v1"
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, comment *service.CommentService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, comment *service.CommentService, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -29,11 +28,8 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, comment *ser
 	}
 	srv := http.NewServer(opts...)
 
-	// 注册Greeter服务
-	helloworldv1.RegisterGreeterHTTPServer(srv, greeter)
-
 	// 注册Comment服务
-	commentv1.RegisterCommentServiceHTTPServer(srv, comment)
+	v1.RegisterCommentServiceHTTPServer(srv, comment)
 
 	return srv
 }
